--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body class="container">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mt-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mt-3 mb-6">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Travel Buddy</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,7 +55,7 @@
 
         <!-- causoul section start -->
 
-        <section>
+        <section class="mt-4">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
